--- a/404.html
+++ b/404.html
@@ -3,10 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>TextMoTo</title>
-  <base href="https://nomorecolor.github.io/TextMoTo/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="https://nomorecolor.github.io/TextMoTo/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.09e2c710755c8867a460.css"></head>
+
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="styles.a4973bd8185ae79287da.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.6696c533341b95a3d617.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="main-es2015.09995a4bcf2dfcc49fb4.js" type="module"></script><script src="main-es5.09995a4bcf2dfcc49fb4.js" nomodule defer></script></body>
+<script src="runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.6696c533341b95a3d617.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="main-es2015.ccb89a3ad854de41cf24.js" type="module"></script><script src="main-es5.ccb89a3ad854de41cf24.js" nomodule defer></script></body>
 </html>
